--- a/menu.css
+++ b/menu.css
@@ -2,20 +2,29 @@
 .body {
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
+    display: flex;
+
   }
   
   .navbar {
-    display: block;
-    overflow: hidden;
-    background-color: rgb(81, 68, 68); 
-    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    width: 100%;
+    height: 70px;
+    z-index: 1;
+    padding: 30px;
 
   }
   
   .navbar a {
+    font-weight: bold;
     float: left;
     font-size: 16px;
-    color: white;
+    color: rgb(14, 1, 1);
     text-align: center;
     padding: 30px 30px;
     text-decoration: none;
@@ -79,6 +88,7 @@
     width: 90%;
     background: #f1f1f1;
     margin-top: 15px;
+    display: flex;
   }
   
   form.search button {
@@ -105,6 +115,8 @@
   }
   .search{
     box-sizing: border-box;
+    display: flex;
+ 
   }
 
   .rescue{
