--- a/menu.css
+++ b/menu.css
@@ -3,6 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     display: flex;
+    background-color: orange;
 
   }
   
@@ -12,11 +13,12 @@
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-
     width: 100%;
     height: 70px;
     z-index: 1;
     padding: 30px;
+    background-color: rgb(121, 83, 14);
+    margin:auto;
 
   }
   
@@ -26,9 +28,8 @@
     font-size: 16px;
     color: rgb(14, 1, 1);
     text-align: center;
-    padding: 30px 30px;
     text-decoration: none;
-    padding-left: 90px;
+    padding: 30px;
   }
   
   .subnav {
@@ -138,4 +139,6 @@
     margin-top: 90px;
 
   }
-  
+  .rescue{
+    background-color: orange;
+  }
