--- a/menu.css
+++ b/menu.css
@@ -3,7 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     display: flex;
-    background-color: orange;
+    background-color: #ffa500;
 
   }
   
