--- a/menu.css
+++ b/menu.css
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
     width: 100%;
     height: 70px;
-    z-index: 1;
+    z-index: 2;
     padding: 30px;
     background-color: rgb(121, 83, 14);
     margin:auto;
@@ -31,24 +31,9 @@
     text-decoration: none;
     padding: 30px;
   }
+
   
-  .subnav {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .subnav .subnavbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 30px 30px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  .navbar a:hover, .subnav:hover .subnavbtn {
+  .navbar a:hover{
     background-color: rgb(103, 73, 73);
   }
   
@@ -77,16 +62,15 @@
   }
   .logo{
     float: left;
-    
     color: pink;
   }
 
   form.search input[type=text] {
-    padding: 10px;
+   padding-left: 90px;
     font-size: 17px;
     border: 1px solid grey;
     float: left;
-    width: 90%;
+    width: 100%;
     background: #f1f1f1;
     margin-top: 15px;
     display: flex;
