--- a/main.css
+++ b/main.css
@@ -1,4 +1,137 @@
-* {
+
+.body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: auto;
+    display: flex;
+    background-color: #ffa500;
+
+  }
+  
+  .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 70px;
+    z-index: 2;
+    padding: 30px;
+    background-color: rgb(121, 83, 14);
+    margin:auto;
+
+  }
+  
+  .navbar a {
+    font-weight: bold;
+    float: left;
+    font-size: 16px;
+    color: rgb(14, 1, 1);
+    text-align: center;
+    text-decoration: none;
+    padding: 30px;
+  }
+
+  
+  .navbar a:hover{
+    background-color: rgb(103, 73, 73);
+  }
+  
+  .subnav-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    background-color: rgb(75, 75, 174);
+    width: 100%;
+    z-index: 1;
+  }
+  
+  .subnav-content a {
+    float: left;
+    color: white;
+    text-decoration: none;
+  }
+  
+  .subnav-content a:hover {
+    background-color: #eee;
+    color: black;
+  }
+  
+  .subnav:hover .subnav-content {
+    display: block;
+  }
+  .logo{
+    float: left;
+    color: pink;
+  }
+
+  form.search input[type=text] {
+   padding-left: 90px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 100%;
+    background: #f1f1f1;
+    margin-top: 15px;
+    display: flex;
+  }
+  
+  form.search button {
+    float: left;
+    width: 5%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+    margin-top: 15px;
+  }
+  
+  form.search button:hover {
+    background: #0b7dda;
+  }
+  
+  form.search::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  .search{
+    box-sizing: border-box;
+    display: flex;
+ 
+  }
+
+  .rescue{
+    float: right;
+    width: 400px;
+    height: 333px;
+    background-color: aliceblue;
+    
+  }
+  .adopapplication{
+    font-family: 'Courier New', Courier, monospace;
+    width: 220px;
+    height: 100px;
+    float: right;
+    background-color: orange;
+    color: white;
+    
+  
+    margin-top: 90px;
+
+  }
+  .rescue{
+    background-color: orange;
+  }
+  .navbar h1{
+    padding-right: 25px;
+    color: rgb(86, 28, 117);
+    margin-left: -55px;
+  }
+  * {
     margin: 0;
     padding: 0;
   }
@@ -26,13 +159,7 @@
     font-family: poppins, Arial, Helvetica, sans-serif;
   }
   
-  body {
-    background-color: #FBAB7E;
-    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
-    font-family: poppins, sans-serif;
-    /* color: white; */
-  }
-  
+
   h1 {
     padding: 2rem 0;
   }
@@ -105,11 +232,6 @@
     padding: 0.375rem 0.75rem;
   }
   
-  /* .form-control:focus {
-    border-color: #80bdff;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-  } */
   
   .input-textarea {
     width: 100%;
@@ -156,8 +278,5 @@
   }
   
   #submit:hover {
-    /* background-color: lightskyblue;
-    border: 2px solid lightskyblue;
-    color: black; */
     transform: scale(1.2, 1.2);
   }
