--- a/main.css
+++ b/main.css
@@ -4,13 +4,13 @@ body {
     font-size: 18px;
     font-weight: 300;
     margin: 0;
-    background-color: #060611;
-    color: antiquewhite;
+    background-color: #ad9a96;
+    color: #47294c;
 }
  
 .navbar {
   overflow: hidden;
-  background-color: #221f1f;
+  background-color: #47294c;
   /* position: fixed; */
   top: 0;
   width: 100%;
@@ -21,45 +21,48 @@ body {
 
 .navbar h1{
   padding-left: 25px;
-  color: antiquewhite;
-  font-size: 60px;
+  color: #faf4fc;
+  font-size: 50px;
 
 
 } 
   
  .navbar a {
     display: inline-block;
-    color: #8c7acc;
+    color: #faf4fc;
     text-align: center;
-    padding: 15px 25px;
+    padding: 15px;
     text-decoration: none;
     font-size: 21px;
 
 }
 
 .navbar a:hover {
-    color:white;
-    background-color: #8c7acc;
-    border-radius: 3px;
+    color:#47294c;
+    background-color: #faf4fc;
+    border-radius: 55px;
 }
 .navbar a:active{
-
-color: lightblue;
-background-color: gray;
+font-weight: bolder;
+color: #503529;
+background-color: #faf4fc;
 
 }
-
+.search{
+  background-color: #47294c;
+}
 
   form.search input[type=text] {
    padding-left: 90px;
     font-size: 17px;
-    border: 1px solid grey;
+    border: 1px solid #47294c;
     float: left;
     width: 100%;
     background: #f1f1f1;
     margin-top: 15px;
     display: flex;
   }
+
   
   form.search button {
     float: left;
@@ -115,7 +118,8 @@ background-color: gray;
     border-radius: 10px;
   }
   .rescue{
-    background-color: #221f1f;
+    color: #faf4fc;
+    background-color: #816f7d;
     border-radius: 10px;
 
   }
@@ -176,7 +180,7 @@ background-color: gray;
   }
   
   form {
-    background: #383333;
+    background-color: #faf4fc;
     padding: 2.5rem 0.625rem;
     border-radius: 0.5rem;
   }
