--- a/main.css
+++ b/main.css
@@ -181,6 +181,7 @@ background-color: #faf4fc;
   
   form {
     background-color: #faf4fc;
+    color: #47294c;
     padding: 2.5rem 0.625rem;
     border-radius: 0.5rem;
   }
