--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ background-color: #faf4fc;
     background: #f1f1f1;
     margin-top: 15px;
     display: flex;
+    border-radius: 20px;
   }
 
   
