--- a/main.css
+++ b/main.css
@@ -266,3 +266,7 @@ background-color: #faf4fc;
   #submit:hover {
     transform: scale(1.2, 1.2);
   }
+
+  .radio-inline{
+    display: inline;
+  }
