--- a/relationshipsince.css
+++ b/relationshipsince.css
@@ -2,13 +2,13 @@
 body {
     text-align: center;
     padding: 100px 60px;
-    background: #90cbf3;
+    background: #fcb4b4;
     font-family: sans-serif;
     font-weight: lighter;
 }
 
 #timer div span {
-    color: #ffffff;
+    color: #f9f0f0;
     display: block;
     margin-top: 15px;
     font-size: .35em;
@@ -28,13 +28,13 @@ body {
     display: inline-block;
     min-width: 90px;
     padding: 15px;
-    background: #020b43;
+    background: #ea6c80;
     border-radius: 10px;
-    border: 2px solid #030d52;
+    border: 2px solid white;
     margin: 15px;
 }
 #header{
-    color: white;
+    color: #ffd9be;
     font-weight: bolder;
     font-size: xx-large;
     font-family: 'Cedarville Cursive', cursive;
